packages/webview_utils/src/features/mdx/embeddable_mdx_components/auto_inserted/auto_inserted_code_block/code_block_styles.scss
.auto-codeblock-icon {
  display: none;
}

figure[data-rehype-pretty-code-figure] {
  .auto-codeblock-icon.hovered {
    display: flex;
  }

  background-color: var(--color-fd-card);
  position: relative;
  color: var(--color-fd-card-foreground);
  @apply rounded border;

  figcaption {
    padding: 0 0.5rem;
    color: var(--color-fd-card-foreground);
    opacity: 0.8;
  }

  pre {
    padding: 0.5rem;
  }

  code {
    @apply rounded;
  }
}

